--- a/SimpleFileBackup.Windows/FormMain.resx
+++ b/SimpleFileBackup.Windows/FormMain.resx
@@ -120,4 +120,47 @@
   <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEACACoCAAAFgAAACgAAAAgAAAAQAAAAAEACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAQEBAAkJCQAPDw8AEhISABQUFAA4ODgASEhIALa2tgC7u7sA8/PzAPT09AD///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAwMDAwMDAwMDAwMDAwMDAwMDAwMAAAAAAAAAAAAAAAMCQgICAgICAgICAgI
+        CAgICAgICAkMAAAAAAAAAAAAAAwDAAAAAAAAAAAAAAAAAAAAAAAAAwwAAAAAAAAAAAAADAUAAAAAAAAA
+        AAAAAAAAAAAAAAAFDAAAAAAAAAAAAAAMBQAAAAAAAAwAAAAADAAAAAAAAAUMAAAAAAAAAAAAAAwFAAAA
+        AAAADAwMDAwMAAAAAAAABQwAAAAAAAAAAAAADAUAAAAAAAAADAwMDAAAAAAAAAAFDAAAAAAAAAAAAAAM
+        BQAAAAAAAAAAAAAAAAAAAAAAAAUMAAAAAAAAAAAAAAwCAAAAAAAAAAAAAAAAAAAAAAAAAgwAAAAAAAAA
+        AAAADAsKCgoKCgoKCgoKCgoKCgoKCgoLDAAAAAAAAAAAAAAMBwYGBgYGBgYGBgYGBgYGBgYGBgcMAAAA
+        AAAAAAAAAAwFAAAAAAAAAAAAAAAAAAAAAAAABQwAAAAAAAAAAAAADAUAAAAAAAAAAAAAAAAAAAAAAAAF
+        DAAAAAAAAAAAAAAMBQAAAAAAAAwAAAAADAAAAAAAAAUMAAAAAAAAAAAAAAwFAAAAAAAADAwMDAwMAAAA
+        AAAABQwAAAAAAAAAAAAADAUAAAAAAAAADAwMDAAAAAAAAAAFDAAAAAAAAAAAAAAMBQAAAAAAAAAAAAAA
+        AAAAAAAAAAUMAAAAAAAAAAAAAAwHBgYGBgYGBgYGBgYGBgYGBgYGBwwAAAAAAAAAAAAADAsKCgoKCgoK
+        CgoKCgoKCgoKCgoLDAAAAAAAAAAAAAAMAgAAAAAAAAAAAAAAAAAAAAAAAAIMAAAAAAAAAAAAAAwFAAAA
+        AAAAAAAAAAAAAAAAAAAABQwAAAAAAAAAAAAADAUAAAAAAAAMAQAAAQwAAAAAAAAFDAAAAAAAAAAAAAAM
+        BQAAAAAAAAwMDAwMDAAAAAAAAAUMAAAAAAAAAAAAAAwFAAAAAAAABAwMDAwEAAAAAAAABQwAAAAAAAAA
+        AAAADAUAAAAAAAAAAAAAAAAAAAAAAAAFDAAAAAAAAAAAAAAMAwAAAAAAAAAAAAAAAAAAAAAAAAMMAAAA
+        AAAAAAAAAAwJCAgICAgICAgICAgICAgICAgICQwAAAAAAAAAAAAAAAwMDAwMDAwMDAwMDAwMDAwMDAwM
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///////////AAAP/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gA
+        AB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gAAB/4AAAf+AAAH/gA
+        AB/4AAAf/AAAP///////////
+</value>
+  </data>
 </root>
